Worker: Throw an ErrorEvent on a failure of module loading

This behavior is defined in the HTML spec:

  Step 13: "If the algorithm asynchronously completes with null, queue a task to
  fire an event named error at worker, and return."
  https://html.spec.whatwg.org/multipage/workers.html#worker-processing-model

An ErrorEvent is created on a worker thread, and passed to the main thread to
dispatch it on a worker object in a document context.

Bug: 843031
Change-Id: I1fd82cba1e02b1658bb2b556742f7a206ee754a7
Reviewed-on: https://chromium-review.googlesource.com/1058998
Commit-Queue: Hiroki Nakagawa <nhiroki@chromium.org>
Reviewed-by: Kouhei Ueno <kouhei@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558903}