third_party/WebKit/LayoutTests/external/wpt/workers/modules/resources/dynamic-import-given-url-worker.js
@@ -1,5 +1,5 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Dynamically import the script URL sent by postMessage().
 self.addEventListener('message', e => {
-  import(e.data);
+  import(e.data).catch(error_event => postMessage('ERROR'));
 });
